--- a/index.html
+++ b/index.html
@@ -1,15 +1,64 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cloudinary-video-player@2.3.3/dist/cld-video-player.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/cloudinary-video-player@2.3.3/dist/cld-video-player.min.css"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ElevateU</title>
+
+    <!-- Primary Meta Tags -->
+    <title>ElevateU - Online Learning Platform</title>
+    <meta name="title" content="ElevateU - Online Learning Platform" />
+    <meta
+      name="description"
+      content="ElevateU is a comprehensive online learning platform offering high-quality courses from expert tutors. Elevate your skills with interactive lessons, quizzes, and certifications."
+    />
+    <meta
+      name="keywords"
+      content="online learning, e-learning, courses, education, tutoring, skills development, certifications, ElevateU"
+    />
+    <meta name="author" content="ElevateU" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://elevateu.com/" />
+    <meta property="og:title" content="ElevateU - Online Learning Platform" />
+    <meta
+      property="og:description"
+      content="Elevate your skills with high-quality courses from expert tutors. Interactive lessons, quizzes, and certifications await you."
+    />
+    <meta property="og:image" content="/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://elevateu.com/" />
+    <meta
+      property="twitter:title"
+      content="ElevateU - Online Learning Platform"
+    />
+    <meta
+      property="twitter:description"
+      content="Elevate your skills with high-quality courses from expert tutors. Interactive lessons, quizzes, and certifications await you."
+    />
+    <meta property="twitter:image" content="/og-image.png" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#7c3aed" />
+
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/cloudinary-video-player@2.3.3/dist/cld-video-player.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/cloudinary-video-player@2.3.3/dist/cld-video-player.min.js"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
